# runfiles-stub

./: .bazelignore  .gitignore  MODULE.bazel  README.md
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yml  publish.yaml  release-rules.yml  release.yml  release_prep.sh
finalize-stub/: Cargo.toml
finalize-stub/src/: main.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
launcher/private/: extensions.bzl
runfiles-stub/: Cargo.toml
runfiles-stub/.cargo/: config.toml
runfiles-stub/src/: linux.rs  macos.rs  main.rs  windows.rs
src/: linux.rs  macos.rs  main.rs  windows.rs
stub/private/: extensions.bzl
template/private/smoke/: BUILD.bazel  MODULE.bazel
testdata/unix/: manifest_basic.txt  manifest_macos.txt  manifest_multiple_repos.txt  manifest_symlinks.txt
testdata/windows/: manifest_basic.txt  manifest_multiple_repos.txt  manifest_spaces_in_path.txt
tools/create-release-archive/: Cargo.toml
tools/create-release-archive/src/: main.rs
